 Version 0.60
 ============

 Released on 
  
 New features and improvements:

   - Accelerators: define new keys in Dossier menu (todo #1204).
   - BalanceRender: improve appearance of header notes (todo #1191).
   - OpeTemplate: make the treeview sortable (todo #1200).
   - RecurrentModel: allow to be duplicated (todo #1206).

 Bug fixes:

   - AccountSelect: close the window on account selection (todo #1187).
   - IPrintable: does not say "succesfully printed" when cancelled (todo #1188).
   - LedgerClose: fix typo.
   - OpeTemplatePage: fix row activation.
   - OpeTemplateSelect: fix missing getter.
   - OpeTemplateStore: fix row insertion (todo #1189).
   - PeriodClose: fix the 'archive accounts' user preference (todo #1205).
   - RecurrentModel: fix update on OpeTemplate mnemmonic modification (todo #1203).
   - TVBin: Fix sort on incomplete rows (todo #1199).

 Other changes:

   - AccountSelect, OpeTemplateSelect: homogeneize UIs.
   - EntryListview, EntryStore: new classes.
   - myIActionMap, myAccelGroup: simplify code and review interface.
   - All collections: are no more sorted (todo #1208).
   - Object classes: review xxx_use_yyy() usage (todo #1207).
   - ofaRateStore, ofaRateTreeview: new classes.
   - RecurrentManagePage: renamed to RecurrentModelPage (todo #1211).

-----------------------------------------------------------------------
 Version 0.59
 ============

 Released on 2016-09-01
  
 New features and improvements:

   - RecurrentOperation: DB Model v4.
   - Rename the application to Open Firm Accounting (todo #1164).
   - BatImport: add a completeness check on imported lines.
   - BatTreeview: add a Notes indicator (todo #1157).
   - BatTreeview: make the treeview sortable (todo #1167).
   - ClassPage: add a Notes indicator (todo #1157).
   - ClassPage: make the treeview sortable (todo #1167).
   - CurrencyPage: add a Notes indicator (todo #1157).
   - CurrencyPage: make the treeview sortable (todo #1167).